--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,17 @@
   "scripts": {
     "dev": "quasar dev",
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
+    "test:unit:ui": "majestic",
+    "test:unit": "cypress open-ct",
+    "test:unit:ci": "cypress run-ct",
+    "test:unit:coverage": "jest --coverage",
+    "test:unit:watch": "jest --watch",
+    "test:unit:watchAll": "jest --watchAll",
+    "serve:test:coverage": "quasar serve test/jest/coverage/lcov-report/ --port 8788",
+    "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\"",
+    "test:e2e": "concurrently \"cross-env E2E_TEST=true start-test\" \"quasar dev\" http-get://localhost:8080 \"cypress open\"",
+    "test:e2e:ci": "concurrently \"cross-env E2E_TEST=true start-test\" \"quasar dev\" http-get://localhost:8080 \"cypress run\""
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -20,15 +30,28 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
+    "@quasar/quasar-app-extension-testing": "^2.0.1",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "beta",
+    "@quasar/quasar-app-extension-testing-unit-jest": "alpha",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "@vue/test-utils": "next",
+    "concurrently": "^6.5.1",
+    "cross-env": "^7.0.3",
+    "cypress": "^9.2.0",
     "eslint": "^7.14.0",
     "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "jest": "^26.6.3",
+    "majestic": "^1.7.0",
+    "ts-jest": "^26.5.6",
+    "vue-jest": "next"
   },
   "browserslist": [
     "last 10 Chrome versions",
