--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
       auto-index-creation: false
       repositories:
         type: reactive
+logging:
+  level:
+    org.springframework.security: DEBUG
