--- a/web/package.json
+++ b/web/package.json
@@ -21,33 +21,34 @@
     "test:e2e:ci": "concurrently \"cross-env E2E_TEST=true start-test\" \"quasar dev\" http-get://localhost:8080 \"cypress run\""
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "core-js": "^3.6.5",
-    "quasar": "^2.0.0",
-    "vue-i18n": "^9.0.0",
-    "vuex": "^4.0.1"
+    "@quasar/extras": "^1.12.2",
+    "core-js": "^3.20.2",
+    "quasar": "^2.4.4",
+    "vue": "^3.2.26",
+    "vue-i18n": "^9.1.9",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app": "^3.0.0",
+    "@babel/eslint-parser": "^7.16.5",
+    "@quasar/app": "^3.2.6",
     "@quasar/quasar-app-extension-testing": "^2.0.1",
     "@quasar/quasar-app-extension-testing-e2e-cypress": "beta",
     "@quasar/quasar-app-extension-testing-unit-jest": "alpha",
-    "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@vue/test-utils": "next",
-    "concurrently": "^6.5.1",
+    "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "cypress": "^9.2.0",
-    "eslint": "^7.14.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint": "^8.6.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.2.0",
     "jest": "^26.6.3",
     "majestic": "^1.7.0",
     "ts-jest": "^26.5.6",
