--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "autoprefixer": "^10.4.2",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "autoprefixer": "^10.4.4",
     "cypress": "^9.5.2",
     "eslint": "^8.10.0",
     "eslint-config-standard": "^16.0.2",
@@ -36,9 +37,14 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "mockm": "^1.1.26-alpha.9",
+    "postcss": "^8.4.12",
+    "pug": "^3.0.2",
+    "rollup": "^2.70.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.6",
-    "vitest": "^0.7.6"
+    "vite-plugin-windicss": "^1.8.3",
+    "vitest": "^0.7.6",
+    "windicss": "^3.5.1"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
