--- a/web/package.json
+++ b/web/package.json
@@ -12,23 +12,24 @@
     "mm": "npx mockm --cwd=mm"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
-    "pinia": "^2.0.11",
-    "quasar": "^2.6.0",
-    "vue": "^3.0.0",
-    "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.0"
+    "@quasar/extras": "^1.13.5",
+    "axios": "^0.21.4",
+    "pinia": "^2.0.13",
+    "quasar": "^2.6.6",
+    "typed.js": "^2.0.12",
+    "vue": "^3.2.33",
+    "vue-i18n": "^9.1.9",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@quasar/app-vite": "^1.0.0-alpha.0",
+    "@quasar/app-vite": "^1.0.0-beta.14",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "@vitejs/plugin-vue": "^2.2.4",
+    "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.4",
-    "cypress": "^9.5.2",
+    "cypress": "^9.5.4",
     "eslint": "^8.10.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-cypress": "^2.12.1",
@@ -36,12 +37,12 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.5.0",
-    "mockm": "^1.1.26-alpha.9",
+    "mockm": "^1.1.26-alpha.17",
     "postcss": "^8.4.12",
     "pug": "^3.0.2",
     "rollup": "^2.70.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.6",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5",
     "vite-plugin-windicss": "^1.8.3",
     "vitest": "^0.7.6",
     "windicss": "^3.5.1"
