--- a/web/package.json
+++ b/web/package.json
@@ -12,39 +12,41 @@
     "mm": "npx mockm --cwd=mm"
   },
   "dependencies": {
-    "@quasar/extras": "^1.13.5",
-    "axios": "^0.21.4",
-    "pinia": "^2.0.13",
+    "@quasar/extras": "^1.13.6",
+    "axios": "^0.27.2",
+    "pinia": "^2.0.14",
     "quasar": "^2.6.6",
     "typed.js": "^2.0.12",
+    "umi-request": "^1.4.0",
     "vue": "^3.2.33",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.14"
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@quasar/app-vite": "^1.0.0-beta.14",
-    "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "autoprefixer": "^10.4.4",
-    "cypress": "^9.5.4",
-    "eslint": "^8.10.0",
-    "eslint-config-standard": "^16.0.2",
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "autoprefixer": "^10.4.7",
+    "cypress": "^9.6.0",
+    "eslint": "^8.15.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vue": "^8.7.1",
     "mockm": "^1.1.26-alpha.17",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.13",
     "pug": "^3.0.2",
-    "rollup": "^2.70.1",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5",
-    "vite-plugin-windicss": "^1.8.3",
-    "vitest": "^0.7.6",
+    "rollup": "^2.72.0",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.8",
+    "vite-plugin-windicss": "^1.8.4",
+    "vitest": "^0.10.5",
     "windicss": "^3.5.1"
   },
   "engines": {
