--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.13.6",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.5.1",
     "quasar": "^2.6.6",
     "typed.js": "^2.0.12",
     "umi-request": "^1.4.0",
