--- a/web/package.json
+++ b/web/package.json
@@ -12,43 +12,44 @@
     "mm": "npx mockm --cwd=mm"
   },
   "dependencies": {
-    "@quasar/extras": "^1.13.6",
+    "@quasar/extras": "^1.14.0",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
-    "pinia-plugin-persistedstate": "^1.5.1",
-    "quasar": "^2.6.6",
+    "pinia-plugin-persistedstate": "^1.6.1",
+    "quasar": "^2.7.1",
     "typed.js": "^2.0.12",
     "umi-request": "^1.4.0",
-    "vue": "^3.2.33",
+    "v3hooks": "^1.5.0",
+    "vue": "^3.2.36",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
-    "@quasar/app-vite": "^1.0.0-beta.14",
-    "@types/node": "^17.0.31",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "@vitejs/plugin-vue": "^2.3.2",
+    "@quasar/app-vite": "^1.0.1",
+    "@types/node": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
-    "cypress": "^9.6.0",
-    "eslint": "^8.15.0",
+    "cypress": "^10.0.1",
+    "eslint": "^8.16.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-n": "^15.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "mockm": "^1.1.26-alpha.17",
-    "postcss": "^8.4.13",
+    "eslint-plugin-vue": "^9.1.0",
+    "mockm": "^1.1.26-alpha.21",
+    "postcss": "^8.4.14",
     "pug": "^3.0.2",
-    "rollup": "^2.72.0",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.8",
+    "rollup": "^2.75.5",
+    "typescript": "^4.7.2",
+    "vite": "^2.9.9",
     "vite-plugin-windicss": "^1.8.4",
-    "vitest": "^0.10.5",
-    "windicss": "^3.5.1"
+    "vitest": "^0.13.1",
+    "windicss": "^3.5.4"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
